@@ -3,7 +3,6 @@ from ..base import get_db_session
 
 
 class ExternalIdentityService(BaseService):
-
     @classmethod
     def by_external_id_and_provider(cls, external_id, provider_name,
                                     db_session=None):
@@ -35,5 +34,6 @@ class ExternalIdentityService(BaseService):
         query = db_session.query(cls.models_proxy.User)
         query = query.filter(cls.model.external_id == external_id)
         query = query.filter(cls.model.provider_name == provider_name)
-        query = query.filter(cls.models_proxy.User.user_name == cls.model.local_user_name)
+        query = query.filter(
+            cls.models_proxy.User.id == cls.model.local_user_id)
         return query.first()
