@@ -5,6 +5,10 @@ Changelog
 * Release: 0.6.3
 * extended functionality of `populate_obj` function of Base class
 * minor bugfix for mysql
+* BACKWARDS INCOMPATIBLE CHANGES
+  * external_identities.local_user_name column is dropped and replaced with
+    local_user_id
+
 
 2015-11-13
 * Release: 0.6.2
